# Cultural-AI

./: .gitignore  .vercelignore  README.md  requirements.txt  test_clip.py  test_model.py  vercel.json
backend/: Dockerfile  app.py  clip_predict.py  model_predict.py  pyproject.toml  requirements.txt
frontend/: index.html  learn.html  quiz.html  result.html  result.js
frontend/css/: learn.css  quiz.css  result.css  style.css
frontend/js/: learn.js  quiz.js  result.js  upload.js
model/: train.py
