[project]
name = "cultural-ai"
version = "0.1.0"
dependencies = [
    "flask",
    "flask-cors",
    "pillow",
    "torch",
    "torchvision",
    "numpy",
    "ftfy",
    "regex",
    "tqdm",
    "clip @ git+https://github.com/openai/CLIP.git"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"